// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabBarItem should render correctly 1`] = `
<View
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
      {
        "backgroundColor": "#ffffff",
      },
      {
        "borderLeftColor": "#dddddd",
        "borderLeftWidth": 1,
      },
      {
        "backgroundColor": "#ffffff",
      },
    ]
  }
>
  <Text
    style={
      [
        {
          "color": "#777777",
          "fontSize": 16,
        },
        {
          "fontWeight": "bold",
        },
      ]
    }
  >
    title
  </Text>
</View>
`;

exports[`TabBarItem should render correctly when border is true 1`] = `
<View
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
      null,
      {
        "borderLeftColor": "#dddddd",
        "borderLeftWidth": 1,
      },
      null,
    ]
  }
>
  <Text
    style={
      [
        {
          "color": "#777777",
          "fontSize": 16,
        },
        null,
      ]
    }
  >
    title
  </Text>
</View>
`;

exports[`TabBarItem should render correctly when selected is true 1`] = `
<View
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
      {
        "backgroundColor": "#ffffff",
      },
      null,
      null,
    ]
  }
>
  <Text
    style={
      [
        {
          "color": "#777777",
          "fontSize": 16,
        },
        null,
      ]
    }
  >
    title
  </Text>
</View>
`;

exports[`TabBarItem should render correctly when title and type is equal 1`] = `
<View
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
      null,
      null,
      null,
    ]
  }
>
  <Text
    style={
      [
        {
          "color": "#777777",
          "fontSize": 16,
        },
        null,
      ]
    }
  >
    ALl
  </Text>
</View>
`;
